crates/compiler/src/tests/e2e/good/0033_method_on_generic_return/main.gom
fn identity[T](x: T) -> T {
    x
}

fn main() {
    let x = identity(42);
    println(x.to_string());
}
