crates/compiler/src/tests/e2e/bad/0033_method_on_generic_return/main.gom
fn identity[T](x: T) -> T {
    x
}

fn main() {
    let x = identity(42);
    string_println(x.to_string());
}
